fix: show banner on mobile

--- a/css/vundu.webflow.css
+++ b/css/vundu.webflow.css
@@ -4557,7 +4557,7 @@ blockquote {
   }
 
   .sticky-banner {
-    display: none;
+    display: block;
   }
 
   .image-6 {
